# term-video

./: .gitignore  CMakeLists.txt  conanfile.txt
include/badapple/: loop.hpp  termshow.hpp  termutils.hpp
src/: main.cpp  termshow.cpp  termshow_blocks.cpp  termshow_braille.cpp  termutils.cpp  video-reader.cpp
